--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,7 @@
         <module>algorithm-wcmp-dist</module>
     </modules>
     <properties>
+        <spring-cloud.version>2021.0.8</spring-cloud.version>
         <java.version>1.8</java.version>
         <algorithm-wcmp.version>0.0.1-SNAPSHOT</algorithm-wcmp.version>
         <!-- 将各个依赖项的版本号提取到此处 -->
@@ -38,16 +39,17 @@
         <apollo-client.version>1.2.0</apollo-client.version>
         <mybatis-plus-boot-starter.version>3.5.3</mybatis-plus-boot-starter.version>
         <mysql-connector-java.version>8.0.32</mysql-connector-java.version>
+        <spring-boot-starter-log4j2.version>3.1.0</spring-boot-starter-log4j2.version>
         <lombok.version>1.18.12</lombok.version>
         <jackson-databind.version>2.9.10.7</jackson-databind.version>
         <jackson-datatype-jsr310.version>2.9.10</jackson-datatype-jsr310.version>
         <commons-codec.version>1.12</commons-codec.version>
         <guava.version>23.0</guava.version>
         <springfox-swagger.version>3.0.0</springfox-swagger.version>
-        <spring-boot-starter-log4j2.version>3.1.0</spring-boot-starter-log4j2.version>
         <jackson.version>2.12.5</jackson.version>
         <hutool-all.version>5.7.20</hutool-all.version>
         <commons-lang3.version>3.12.0</commons-lang3.version>
+        <spring-cloud-starter-openfeign.version>3.1.8</spring-cloud-starter-openfeign.version>
     </properties>
 
     <dependencyManagement>
@@ -189,6 +191,21 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter-log4j2</artifactId>
                 <version>${spring-boot-starter-log4j2.version}</version>
+            </dependency>
+
+            <!--openfein的依赖-->
+                     <dependency>
+                         <groupId>org.springframework.cloud</groupId>
+                         <artifactId>spring-cloud-dependencies</artifactId>
+                         <version>${spring-cloud.version}</version>
+                         <type>pom</type>
+                         <scope>import</scope>
+                     </dependency>
+
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-starter-openfeign</artifactId>
+                <version>${spring-cloud-starter-openfeign.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
