--- a/algorithm-wcmp-api/pom.xml
+++ b/algorithm-wcmp-api/pom.xml
@@ -92,6 +92,10 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-loadbalancer</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+        </dependency>
     </dependencies>
 
     <!--构建-->
