--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,7 @@
         <hutool-all.version>5.7.20</hutool-all.version>
         <commons-lang3.version>3.12.0</commons-lang3.version>
         <spring-cloud-starter-openfeign.version>3.1.8</spring-cloud-starter-openfeign.version>
+        <poi-ooxml.version>5.0.0</poi-ooxml.version>
     </properties>
 
     <dependencyManagement>
@@ -201,7 +202,14 @@
                 <artifactId>spring-cloud-starter-openfeign</artifactId>
                 <version>${spring-cloud-starter-openfeign.version}</version>
             </dependency>
+            <!--poi-->
+            <dependency>
+                <groupId>org.apache.poi</groupId>
+                <artifactId>poi-ooxml</artifactId>
+                <version>${poi-ooxml.version}</version>
+            </dependency>
         </dependencies>
+
     </dependencyManagement>
     <dependencies>
         <dependency>
@@ -210,5 +218,6 @@
             <version>${lombok.version}</version>
             <scope>provided</scope>
         </dependency>
+
     </dependencies>
 </project>
