feature：user login   #9

--- a/algorithm-wcmp-api/src/main/resources/application.yml
+++ b/algorithm-wcmp-api/src/main/resources/application.yml
@@ -5,9 +5,9 @@ remote:
   management:
     ip: http://127.0.0.1:8080
   wechat:
-    url: http://127.0.0.1:8080
+    url: https://api.weixin.qq.com
     appid: wxc62afc144417346e
-    secret: b5a7ea8dcee900d1f1663076ac8dba3b
+    secret: 2387d60cc0a34703ae8ec0acedd2a635
 
 spring:
   servlet:
@@ -17,7 +17,7 @@ spring:
   #  Mysql
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://127.0.0.1:3306/pose-wcmp?useUnicode=true&characterEncoding=UTF-8
+    url: jdbc:mysql://127.0.0.1:3308/pose-wcmp?useUnicode=true&characterEncoding=UTF-8
     username: root
     password: root
   #    MVC搜索路径
