--- a/algorithm-wcmp-dao/pom.xml
+++ b/algorithm-wcmp-dao/pom.xml
@@ -48,5 +48,11 @@
             <groupId>io.springfox</groupId>
             <artifactId>springfox-boot-starter</artifactId>
         </dependency>
+
+        <!--Log4J2  -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-log4j2</artifactId>
+        </dependency>
     </dependencies>
 </project>
